{
    "name": "RotateAround",
    "maps": [
        {
            "name": "Rotate",
            "id": "13611451-b5e1-425f-8262-8cd61f7d88a5",
            "actions": [
                {
                    "name": "ClickOnTarget",
                    "type": "Value",
                    "id": "0ea892f7-f1d4-49f7-b6a6-f49b9eb9349b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotateAround",
                    "type": "Value",
                    "id": "c1d7617b-c99e-45de-9365-f2ab387dc9af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "OneTouch",
                    "id": "9e75a012-4c4b-4bfc-ad78-a89c7821b010",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnTarget",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "344e2063-a6ca-48b7-ac46-c539e335c686",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnTarget",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "dcaaef64-bb0a-4afc-8fec-3905a1981b20",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnTarget",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "42ebdb3c-13e8-4d20-8a97-d5d86eb38448",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}